# Autonomous_Robotic_Forklift

./: README.md
Electrical/: PCB_1_1 (1).eprj
Embedded/Differential & Fork ECU/: .cproject  .project  Adc.h  App.c  App.h  Encoder.h  Encoder_Cfg.h  Gpt_Lcfg.c  Gptm.c  Gptm.h  Gptm_Cfg.h  IntCtrl.c  IntCtrl_Lcfg.c  IntCtrl_Regs.h  Port_Lcfg.c  Uart.h  Uart_Lcfg.c  tm4c123gh6pm_startup_ccs.c
Embedded/Differential & Fork ECU/.jxbrowser.userdata/: Local State  SingletonCookie  SingletonLock  SingletonSocket
Embedded/Differential & Fork ECU/.launches/: App_ECU_1.launch
Embedded/Differential & Fork ECU/.metadata/: version.ini
Embedded/Differential & Fork ECU/Debug/: Adc.d  Adc_Lcfg.d  App.d  App_ECU_1.map  App_ECU_1.out  App_ECU_1_linkInfo.xml  Differential.d  Dio.d  Dio_PBcfg.d  Encoder.d  Encoder_Lcfg.d  Gpt_Lcfg.d  Gptm.d  IntCtrl.d  IntCtrl_Lcfg.d  PID.d  PWM.d  PWM_Lcfg.d  Port.d  Port_Lcfg.d  Steering.d  Suport.d  Uart.d  Uart_Lcfg.d  ccsObjs.opt  main.d  makefile  subdir_rules.mk  subdir_vars.mk
Embedded/Drivers/Adc/: Adc.c
Embedded/Drivers/Application/: PID.c  PID.h  main.c
Embedded/Drivers/Common/: Platform_Types.h  Std_Types.h  tm4c123gh6pm_registers.h
Embedded/Drivers/DIO/: Dio.h  Dio_Cfg.h  Dio_PBcfg.c  Dio_Regs.h
Embedded/Drivers/Encoder/: Encoder.c
Embedded/Drivers/Gptm/: Gpt_Regs.h
Embedded/Drivers/IntCtrl/: IntCtrl.h  IntCtrl_Cfg.h
Embedded/Drivers/PID/: PID.c  PID.h
Embedded/Drivers/Port/: Port.c  Port_Regs.h
Embedded/Drivers/Pwm/: PWM.c  PWM.h  PWM_Cfg.h  PWM_Lcfg.c  PWM_Regs.h
Embedded/Drivers/Uart/: Uart.c  Uart_Cfg.h  Uart_Regs.h
Embedded/Mega_Buffer_ECU/: Mega_Buffer_ECU.ino
Embedded/Steering ECU/: .ccsproject  .cproject  .project  Adc.c  Adc_Cfg.h  Adc_Lcfg.c  Adc_Regs.h  App.c  App.h  Buzzer.c  Buzzer.h  Common_Macros.h  Compiler.h  Dio.c  Dio_Cfg.h  Dio_PBcfg.c  Encoder.c  Encoder.h  Encoder_Cfg.h  Encoder_Lcfg.c  Gpt_Lcfg.c  Gpt_Regs.h  Gptm.c  Gptm.h  Gptm_Cfg.h  IntCtrl.c  IntCtrl_Cfg.h  IntCtrl_Lcfg.c  PWM.c  PWM_Cfg.h  PWM_Lcfg.c  Platform_Types.h  Port.c  Port.h  Port_Cfg.h  Port_Lcfg.c  Std_Types.h  Uart.c  Uart.h  Uart_Cfg.h  (+3 more)
Mechanical/: ASS Templete.SLDDRW  Templete.SLDDRW
Mechanical/EXTRA/: DC geared motor.SLDPRT  bushing.SLDPRT
Mechanical/stress analysis/: Assembly for left system-Static 1-1.docx  G_Forklift-Static 1-1.docx  Locating Differential Bearing.docx  SHAFT.docx  Steering bearing plate-Static 1-1.docx  Steering flange-Static 1-1.docx  diff base-Static 1-1.docx  frame-Static 1-1.docx  guide frame-Static 1-1.docx  steering frame-Static 1-2.docx
Modelling/: Lidar_RobotPlot.m  Magic.SLDPRT  Obstacles.slx  Obstacles.slxc  RobotPlot.m  Robot_contour.slx  Robot_contour.slx.r2019a  Robot_contour_array.slx  Robot_contour_array.slxc  TotalPlot.m  Two_models.slx  Two_models.slx.r2019a  Two_models_V1.slx  Two_models_V2.slx  V0.0.txt  V1.0.txt  V2.0.txt  V3.0.txt  V4.0.txt  V5.999.txt  VF.txt  intersection.slx  intersection.slxc  intersection_continous.slx  intersection_continous.slxc  inverse_model.slx  matlab.mat  modelling1.slx  modelling1.slx.r2019a  modelling1.slxc  offset.SLDPRT  path_obst.m  sim2.SLDPRT  sim3.SLDPRT  sim4.SLDPRT  total_graph.m
ROS/catkin_ws/src/teb_local_planner_tutorials/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/teb_local_planner_tutorials/cfg/carlike/: costmap_common_params.yaml  teb_local_planner_params.yaml
ROS/catkin_ws/src/teb_local_planner_tutorials/launch/: robot_carlike_in_stage.launch
ROS/catkin_ws/src/teb_local_planner_tutorials/maps/: bet_anas2.yaml  warsha_better.yaml
ROS/rosmemo/: CMakeLists.txt  package.xml
ROS/rosmemo/config/: joint_names_rosmemo.yaml  joint_states.yaml  rossmemo.yaml
ROS/rosmemo/launch/: display.launch  gazebo.launch  origin file of rviz  rosmemo.launch
ROS/rosmemo/launch/unit_box/: model.sdf
ROS/rosmemo/meshes/: left_wheel.STL  right_wheel.STL  steering_angle.STL  steering_wheel.STL
ROS/rosmemo/urdf/: rosmemo.csv  rosmemo.gv  rosmemo.urdf
Vision packages/zbar_ros/: README.md
(+2338 files in other folders)
