<?xml version="1.0"?>
<package>
  <name>teb_local_planner_tutorials</name>
  <version>0.2.4</version>
  <description>The teb_local_planner_tutorials package</description>

  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teb_local_planner_tutorials</url>


<buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>localization_data_pub</build_depend>
  <build_depend>tf2_ros</build_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
